# workcraft

./: .pre-commit-config.yaml  Dockerfile  README.md  example.py  example_workraft.config.json  init-pg-cron.sh  noxfile.py  pyproject.toml  renew_workraft_db.sh  workraft.config.json
scripts/: start_mysql_docker.py
sqls/: 0_create_logs_table.sql  1_create_peons_table.sql  3_reopen_failed_tasks_procedure.sql  5_self_correcting_task_event.sql  7_check_dead_workers_procedure.sql  8_check_dead_worker_event.sql
tests/: test_everything.py
workcraft/: __main__.py  core.py  db.py  models.py  peon.py  settings.py  utils.py
workcraft/sqls/: 2_create_bountyboard_tables.sql  4_self_correct_task_procedure.sql
workraft/: __init__.py  __main__.py  constants.py  core.py  db.py  models.py  peon.py  settings.py  sql_commands.py  stronghold.py  tasks.py  utils.py
workraft/sqls/: 2_create_bountyboard_table.sql  6_reopen_failed_tasks_event.sql  create_check_dead_workers_function.sql  create_enum_types.sql  create_get_next_task_function.sql  create_heartbeat_function.sql  create_indexes.sql  create_notify_new_task_function.sql  create_refire_pending_tasks_for_all_function.sql  create_reopen_task_function.sql  create_self_correct_tasks_function.sql  create_send_refire_signal_function.sql  create_setup_cron_jobs.sql  create_tables.sql  create_trigger_on_bountyboard.sql  create_trigger_task_updated_to_pending.sql
